<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".MainActivity">
    <Space
        android:layout_height="15dp"
        android:layout_width="1dp" />
    <TextView android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_commands_and_send" />
    <Space
        android:layout_height="15dp"
        android:layout_width="1dp" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rowCount="6"
        android:columnCount="3">
        <ImageButton
            android:id="@+id/F"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@color/colorBtn"
            android:src="@drawable/up"
            android:contentDescription="@string/command_forward"
            android:onClick="addCommand"
            android:visibility="visible"
            android:layout_margin="10dp" />
        <ImageButton
            android:id="@+id/L"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_row="2"
            android:layout_column="0"
            android:src="@drawable/left"
            android:background="@color/colorBtn"
            android:contentDescription="@string/command_left"
            android:onClick="addCommand"
            android:layout_margin="10dp"
            />
        <ImageButton
            android:id="@+id/S"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_row="2"
            android:layout_column="1"
            android:src="@drawable/send"
            android:background="@color/colorSend"
            android:contentDescription="@string/command_send"
            android:onClick="sendCommand"
            android:layout_margin="10dp"
            />
        <ImageButton
            android:id="@+id/R"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_row="2"
            android:layout_column="2"
            android:scaleX="-1"
            android:src="@drawable/left"
            android:background="@color/colorBtn"
            android:contentDescription="@string/command_right"
            android:onClick="addCommand"
            android:layout_margin="10dp"
            />
        <ImageButton
            android:id="@+id/B"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_row="3"
            android:layout_column="1"
            android:rotation="180"
            android:src="@drawable/up"
            android:background="@color/colorBtn"
            android:contentDescription="@string/command_back"
            android:onClick="addCommand"
            android:layout_margin="10dp"
            />
    </GridLayout>

    <TextView
        android:id="@+id/commands_edit"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="54dp" />

</LinearLayout>