<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gamesp.clientws.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"/>
    <TextView
        android:id="@+id/id_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_label"/>
    <TextView
        android:id="@+id/state_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/position_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_label"/>
    <TextView
        android:id="@+id/position_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>